--- a/src/app/pages/calories-calculator/diet-calculator/diet-calculator.component.html
+++ b/src/app/pages/calories-calculator/diet-calculator/diet-calculator.component.html
@@ -20,7 +20,7 @@
     </ion-card>
 
     <ion-list class="transparent-list" *ngIf="foods">
-      <ion-item class="transparent-item" *ngFor="let food of foods">
+      <ion-item lines="none" class="transparent-item" *ngFor="let food of foods">
         <ion-row class="flex-container">
           <ion-col size="6" size-md="3">
             <ion-thumbnail>
