--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -1,4 +1,4 @@
-<ion-header></ion-header>
+<ion-header class="ion-no-border"></ion-header>
 <br><br><br>
 <ion-content>
   <div [ngClass]="{'blur-background': isBlurred, 'default-background': !isBlurred}"></div>
