--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -10,7 +10,7 @@
             <ion-card routerLink="/workout-scheduling">
               <ion-card-content>
                 <ion-card-title style="text-align: center;">
-                  <ion-icon name="receipt-outline"></ion-icon>
+                  <ion-icon name="receipt"></ion-icon>
                 </ion-card-title>
                <ion-item lines="none">
                 <ion-text style="text-align: center; margin: 0 auto;">Sessions</ion-text>
@@ -23,7 +23,7 @@
             <ion-card routerLink="/fitnessgoals">
               <ion-card-content>
                 <ion-card-title style="text-align: center;">
-                  <ion-icon name="american-football-outline"></ion-icon>
+                  <ion-icon name="american-football"></ion-icon>
                 </ion-card-title>
                <ion-item lines="none">
                 <ion-text style="text-align: center; margin: 0 auto;">Goals</ion-text>
@@ -36,7 +36,7 @@
             <ion-card routerLink="/home/leaderboard">
               <ion-card-content>
                 <ion-card-title style="text-align: center;">
-                  <ion-icon name="bar-chart-outline"></ion-icon>
+                  <ion-icon name="bar-chart"></ion-icon>
                 </ion-card-title>
                 <ion-item lines="none" >
                   <ion-text style="text-align: center; margin: 0 auto;">Rank</ion-text>
@@ -49,7 +49,7 @@
             <ion-card routerLink="/view-personalbests">
               <ion-card-content>
                 <ion-card-title style="text-align: center;">
-                  <ion-icon name="analytics-outline"></ion-icon>
+                  <ion-icon name="analytics"></ion-icon>
                 </ion-card-title>
                 <ion-item lines="none">
                   <ion-text style="text-align: center;  margin: 0 auto;">Bests</ion-text>
@@ -73,7 +73,8 @@
                   <ion-card-title>
                     <ion-icon name="star"></ion-icon>
                   </ion-card-title>
-                  Points
+
+                 <ion-text>Points</ion-text>
                 </ion-card-content>
               </ion-card>
             </ion-col>
@@ -83,7 +84,8 @@
                   <ion-card-title>
                     <ion-icon name="medal"></ion-icon>
                   </ion-card-title>
-                  Badges
+
+                 <ion-text>Badges</ion-text>
                 </ion-card-content>
               </ion-card>
             </ion-col>
@@ -96,7 +98,7 @@
                   <ion-card-title>
                     <ion-icon name="receipt"></ion-icon>
                   </ion-card-title>
-                  {{sessionsCompleted + " Sessions Completed"}}
+                 <ion-text>{{sessionsCompleted + " Sessions Completed"}}</ion-text>
                 </ion-card-content>
               </ion-card>
             </ion-col>
@@ -115,9 +117,10 @@
                 <ion-card class="grid-cards" routerLink="/workout-scheduling">
                  <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="calendar-outline"></ion-icon>
+                    <ion-icon name="calendar"></ion-icon>
                   </ion-card-title>
-                  Schedule
+
+                 <ion-text>Schedule</ion-text>
                  </ion-card-content>
                 </ion-card>
               </ion-col>
@@ -125,9 +128,10 @@
                 <ion-card class="grid-cards" routerLink="/friends">
                  <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="people-circle-outline"></ion-icon>
+                    <ion-icon name="people-circle"></ion-icon>
                   </ion-card-title>
-                 Friends
+
+                 <ion-text>Friends</ion-text>
                  </ion-card-content>
                 </ion-card>
               </ion-col>
@@ -137,9 +141,10 @@
                 <ion-card class="grid-cards" routerLink="/groups">
                  <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="people-outline"></ion-icon>
+                    <ion-icon name="people"></ion-icon>
                   </ion-card-title>
-                 Groups
+
+                 <ion-text>Groups</ion-text>
                  </ion-card-content>
                 </ion-card>
               </ion-col>
@@ -147,9 +152,10 @@
                 <ion-card class="grid-cards" routerLink="/home/search">
                  <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="body-outline"></ion-icon>
+                    <ion-icon name="body"></ion-icon>
                   </ion-card-title>
-                 People
+
+                 <ion-text>People</ion-text>
                  </ion-card-content>
                 </ion-card>
               </ion-col>
@@ -159,9 +165,9 @@
                 <ion-card class="grid-cards" routerLink="/exercise-explorer">
                  <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="watch-outline"></ion-icon>
+                    <ion-icon name="watch"></ion-icon>
                   </ion-card-title>
-                     <ion-label>Explorer!</ion-label>
+                 <ion-text>Explorer!</ion-text>
 
                  </ion-card-content>
                 </ion-card>
@@ -170,9 +176,10 @@
                     <ion-card class="grid-cards" routerLink="/calories-calculator">
                         <ion-card-content>
                             <ion-card-title>
-                                <ion-icon name="calculator-outline"></ion-icon>
+                                <ion-icon name="calculator"></ion-icon>
                             </ion-card-title>
-                            Calories
+
+                           <ion-text>Calories</ion-text>
                         </ion-card-content>
                     </ion-card>
                 </ion-col>
