--- a/src/app/pages/exercise-explorer/exercise-explorer.page.html
+++ b/src/app/pages/exercise-explorer/exercise-explorer.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
       <backbutton></backbutton>
@@ -7,7 +7,9 @@
   </ion-toolbar>
 </ion-header>
 
-<h1 class="center">3D Exercise Model</h1>
+<ion-text>
+  <h1 class="center">3D Exercise Model</h1>
+</ion-text>
 
 <div class="center-container">
   <canvas #canvas id="canvas" style="height: 90vh; width: 100vw;"></canvas>
