--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-menu contentId="main-content">
-  <ion-header>
+  <ion-header class="ion-no-border">
     <ion-toolbar class="toolbar">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
@@ -43,14 +43,14 @@
 
 
 
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar class="toolbar">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
       <ion-chip class="clickable" routerLink="/userprofile">
-        <ion-item style="margin-top: 2px">
+        <ion-item class="transparent-item" style="margin-top: 2px">
           <ion-avatar>
             <img src={{ProfilePicture$}}/> 
           </ion-avatar>
