--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -1,7 +1,7 @@
 <div class="outer-container">
   <ion-content>
     <div class="inner-container">
-      <ion-header>
+      <ion-header class="ion-no-border">
         <ion-segment (ionChange)="onSegmentChange($event)" value="chats">
           <ion-segment-button value="chats">Chats</ion-segment-button>
           <ion-segment-button value="groups">Groups</ion-segment-button>
