--- a/src/app/pages/userprofile/image-modal/image-modal.component.html
+++ b/src/app/pages/userprofile/image-modal/image-modal.component.html
@@ -1,5 +1,5 @@
 
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-title>Profile Picture</ion-title>
     <ion-buttons slot="end">
