--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -3,12 +3,12 @@
     <ion-toolbar class="profile-outer-container">
       <div class="back-button">
        <ion-buttons slot="start">
-        <backbutton ></backbutton>
+        <backbutton></backbutton>
        </ion-buttons>
 
        <ion-buttons class="edit-button">
         <ion-button class="default-button"  routerLink="/setprofile" >
-          <ion-icon name="create-outline" class="larger-back-button"  style="color: white !important;"></ion-icon>
+          <ion-icon name="create-outline" class="larger-back-button"></ion-icon>
         </ion-button>
        </ion-buttons>
       </div>
@@ -53,7 +53,7 @@
               <ion-card-title>
                 <ion-icon name="american-football"></ion-icon>
               </ion-card-title>
-              <h2>Goals</h2>
+              <ion-text>Goals</ion-text>
             </ion-card-content>
           </ion-card>
         </swiper-slide>
@@ -63,7 +63,7 @@
               <ion-card-title>
                 <ion-icon name="analytics"></ion-icon>
               </ion-card-title>
-              <h2>Performance</h2>
+              <ion-text>Performance</ion-text>
             </ion-card-content>
           </ion-card>
         </swiper-slide>
@@ -73,7 +73,7 @@
               <ion-card-title>
                 <ion-icon name="heart"></ion-icon>
               </ion-card-title>
-              <h2>Health Data</h2>
+              <ion-text>Health Data</ion-text>
             </ion-card-content>
           </ion-card>
         </swiper-slide>
@@ -94,7 +94,7 @@
               <ion-card-title>
                 <ion-icon name="medal"></ion-icon>
               </ion-card-title>
-              <h2>Badges</h2>
+              <ion-text>Badges</ion-text>
             </ion-card-content>
           </ion-card>
         </swiper-slide>
@@ -104,7 +104,7 @@
               <ion-card-title>
                 <ion-icon name="star"></ion-icon>
               </ion-card-title>
-              <h2>Points</h2>
+              <ion-text>Points</ion-text>
             </ion-card-content>
           </ion-card>
         </swiper-slide>
