--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,7 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
+@import "dark-theme.scss";
+@import "light-theme.scss";
 
 /** Ionic CSS Variables **/
 :root {
@@ -76,220 +78,3 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
-
-//@media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
-
-  body [color-theme="dark"]{
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
-
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
-
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
-
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
-
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
-
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
-
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
-
-  /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-  .ios body[color-theme="dark"] {
-    --ion-background-color: #010a1b;
-    --ion-background-color-rgb: 0,0,0;
-
-    --ion-text-color: #4185ff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-color-step-50: #001b34;
-    --ion-color-step-100: #172a43;
-    --ion-color-step-150: #2b3b52;
-    --ion-color-step-200: #3f4c62;
-    --ion-color-step-250: #525e72;
-    --ion-color-step-300: #667082;
-    --ion-color-step-350: #00081a;
-    --ion-color-step-400: #001b34;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
-
-    --ion-item-background: #010a1b;
-
-    --ion-card-background: #001b34;
-    --ion-toolbar-background: #001b34;
-    --ion-item-background: #001b34;
-    --ion-tab-bar-background: #001b34;
-    --ion-tab-bar-border-color: #010a1b;
-    --ion-tab-bar-color: #ffffff;
-    --ion-item-divider-color: #010a1b;
-    --ion-modal-background-color: #001b34;
-  }
-
-
-.ios body[color-theme="light"] {
-  /** color theme **/
-  --primary-color: #628BA0; // Slate Blue
-  --secondary-color: #79919D; // Steel BLue
-  --secondary-variant-color: #BFDBEA; // Light Sky Blue
-  --background-color: #F2F8FC; // Pale Baby Blue
-  --ripple-main-color: #f1a785;
-  --ripple-white-color: whitesmoke;
-
-  --input-field-color: white;
-  --button-secondary-color: white;
-  --ion-background-color: var(--background-color);
-
-  --ion-text-color: var(--primary-color);
-
-  --ion-color-step-50: var(--background-color);
-  --ion-color-step-100: #204d9a;
-  --ion-color-step-150: #1e6eda;
-  --ion-color-step-200: #3a7cee;
-  --ion-color-step-250: #588cec;
-  --ion-color-step-300: #72a1ef;
-  --ion-color-step-350: var(--background-color);
-  --ion-color-step-400: #b0d4ff;
-  --ion-color-step-450: #c7e2f8;
-  --ion-color-step-500: #fcf7f7;
-  --ion-color-step-550: #f5f5f5;
-  --ion-color-step-600: #999999;
-  --ion-color-step-650: #a6a6a6;
-  --ion-color-step-700: #b3b3b3;
-  --ion-color-step-750: #bfbfbf;
-  --ion-color-step-800: #cccccc;
-  --ion-color-step-850: #d9d9d9;
-  --ion-color-step-900: #e6e6e6;
-  --ion-color-step-950: #f2f2f2;
-
-
-  --ion-item-background: var(--background-color);
-
-  --ion-card-background: var(--background-color);
-  --ion-toolbar-background: var(--background-color);
-  --ion-item-background: var(--background-color);
-  --ion-tab-bar-background: var(--background-color);
-  --ion-tab-bar-border-color: var(--background-color);
-  --ion-tab-bar-color: var(--primary-color);
-  --ion-item-divider-color: var(--background-color);
-  --ion-modal-background-color: var(--background-color);
-  --ion-label-color: var(--primary-color);
-}
-
-  .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
-    --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
-
-
-  /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
-
-  .md body[color-theme="dark"] {
-    --ion-background-color: #010a1b;
-    --ion-background-color-rgb: 0,0,0;
-
-    --ion-text-color: #4185ff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-color-step-50: #001b34;
-    --ion-color-step-100: #172a43;
-    --ion-color-step-150: #2b3b52;
-    --ion-color-step-200: #3f4c62;
-    --ion-color-step-250: #525e72;
-    --ion-color-step-300: #667082;
-    --ion-color-step-350: #00081a;
-    --ion-color-step-400: #001b34;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
-
-    --ion-item-background: #010a1b;
-
-    --ion-card-background: #001b34;
-    --ion-toolbar-background: #001b34;
-    --ion-item-background: #001b34;
-    --ion-tab-bar-background: #001b34;
-    --ion-tab-bar-border-color: #010a1b;
-    --ion-tab-bar-color: #ffffff;
-    --ion-item-divider-color: #010a1b;
-    --ion-modal-background-color: #001b34;
-  }
-//}
