--- a/src/app/pages/locations/locations.page.html
+++ b/src/app/pages/locations/locations.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-title>locations</ion-title>
   </ion-toolbar>
