--- a/src/app/pages/logout/logout.page.html
+++ b/src/app/pages/logout/logout.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-title>logout</ion-title>
   </ion-toolbar>
