--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
       <backbutton (click)="removeSession()"></backbutton>
@@ -49,10 +49,5 @@
         <ion-icon name="send" class="message-send-icon"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <!-- <ion-fab horizontal="end" vertical ="bottom">
-      <ion-fab-button class="message-send-fab-button" [color]="isText() ? '' : 'medium'" [disabled]="!isText()" (click)="sendMessage()">
-        <ion-icon name="send" class="message-send-icon"></ion-icon>
-      </ion-fab-button>
-    </ion-fab> -->
   </ion-item>
 </ion-footer>
