--- a/src/app/pages/search/group/group.component.scss
+++ b/src/app/pages/search/group/group.component.scss
@@ -46,13 +46,9 @@ ion-row {
 }
 
 .header {
-    ion-icon {
-        color: var(--main-color);
-    }
-    color: var(--main-color);
     text-decoration: solid;
-    text-shadow: 0px 2px 10px;
     font-size: x-large;
+    // font-weight: bolder;
 }
 
 ion-buttons {
