--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -2,14 +2,9 @@ ion-text {
     margin: 20px;
 }
 
-// .schedule-name {
-//     font-weight: bold;
-//     font-size: 1.5rem;
-//     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-//     background: linear-gradient(90deg, #1D3557, black);
-//     background-clip: text; 
-//     -webkit-text-fill-color: transparent;
-// }
+.schedule-name {
+    font-weight: bold;
+}
   
 .schedule-header{
     --highlight-height: 0;
@@ -18,7 +13,6 @@ ion-text {
     border-radius: 12px;
     border-end-end-radius: 0px;
     border-end-start-radius: 0px;
-    color: white;
 }
 
 ion-card, ion-item {
