--- a/src/global.scss
+++ b/src/global.scss
@@ -24,32 +24,6 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
-// @import "theme/variables.scss";
-// @import "theme/colortheme.scss";
-
-
-// ion-header {
-//   --ion-header-border-width: 0;
-//   --ion-header-box-shadow: none;
-// }
-
-// ion-footer {
-//     background-color: var(--background-color);
-//     --border: none;
-// }
-
-// ion-content {
-//     overflow-y: auto;
-//     --background: var(--background-color);
-// }
-
-// ion-card {
-//     --background: var(--background-color);
-// }
-
-// ion-modal {
-//     background-color: var(--background-color);
-// }
 
 .larger-back-button {
     --padding-start: 12px; 
@@ -62,25 +36,10 @@ ion-title {
     text-align: center;
 }
 
-// ion-toolbar {
-//     --background: var(--background-color);
-//     --color: var(--primary-color) !important;
-// }
-
-// ion-toolbar *{
-//     --color: var(--primary-color) !important;
-// }
-
-// ion-toolbar ion-item {
-//     --background: transparent;
-//     --color: var(--primary-color) !important;
-// }
-
-// * {
-//     font-family: 'Montserrat', sans-serif;
-//     transition: .2;
-//     --color: var(--secondary-color) !important;
-// }
+* {
+    font-family: 'Montserrat', sans-serif;
+    transition: .2;
+}
 
 ion-chip {
     background-color: transparent;
@@ -99,16 +58,6 @@ ion-spinner {
     height: 100%;
 }
 
-// ion-fab-button  {
-//     --background: var(--main-color);
-//     --background-hover: var(--ripple-main-color);
-//     --background-activated: var(--ripple-main-color);
-//     --background-focused: var(--ripple-main-color);
-//     --color: white !important;
-//     --ripple-color: var(--ripple-main-color);
-//     opacity: 0.9;
-// }
-
 ion-segment {
     border-radius: 0px;
     // background-color: var(--primary-color);
@@ -117,7 +66,7 @@ ion-segment {
 .message-input-field {
     border: 2px solid #457B9D;
     border-radius: 10px;
-
+    --inner-padding-end: 0px;
     .input-field-wrapper {
         width: 85%;
         padding: 0px;
@@ -138,7 +87,7 @@ ion-segment {
 }
 
 swiper-container::part(bullet-active) {
-    background-color: #001b34 // #A8DADC;
+    background-color: #001b34; // #A8DADC;
 }
 
 .message-send-fab-button {
@@ -161,18 +110,10 @@ swiper-container::part(bullet-active) {
 }
 
 ion-button:not(.backbutton,.default-button, .white-button) {
-    // --background: var(--main-color);
-    // --background-hover: var(--ripple-main-color);
-    // --background-activated: var(--ripple-main-color);
-    // --background-focused: var(--ripple-main-color);
     --border-radius: 10px;
     --padding: 10px;
-  
     --border-style: solid;
     --border-width: 2px;
-    --border-color: var(--main-color);
-  
-    // --color: white !important;
 }
 
 .white-button {
