--- a/src/app/pages/badges/badge/badge.component.html
+++ b/src/app/pages/badges/badge/badge.component.html
@@ -1,5 +1,5 @@
 <ion-card class="badge" [ngClass]="{'received': received, 'not-received': !received}">
-  <ion-item>
+  <ion-item lines="none">
     <ion-grid>
       <ion-row>
         <ion-col size="auto" class="badgeSection">
