--- a/src/app/pages/messages/chatbox/chatbox.component.html
+++ b/src/app/pages/messages/chatbox/chatbox.component.html
@@ -11,7 +11,7 @@
     </div>
   
     <ng-template #loaderContent>
-      <ion-item lines="none">
+      <ion-item lines="none" class="transparent-item">
         <div class="loader-wrapper">
           <ion-spinner></ion-spinner>
         </div>
