--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -9,7 +9,7 @@
           <ion-img [src]="friendProfile.profileURL" alt="profile pic here"></ion-img>
         </ion-avatar>
         <ion-label>
-          <h2>{{friendProfile.displayName}}</h2>
+          <ion-text>{{friendProfile.displayName}}</ion-text>
         </ion-label> 
       </ion-chip>
     </ion-title>
