--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -11,7 +11,7 @@
           <ion-img alt="Silhouette of a person's head" [src]="group.profileURL"/>
         </ion-avatar>
         <ion-label>
-          {{group.displayName}}
+          <ion-text>{{group.displayName}}</ion-text>
         </ion-label>
       </ion-chip>
     </ion-title>
