--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -37,7 +37,7 @@ body[color-theme="dark"] {
   --ion-modal-background-color: #001b34;
 
   ion-text, p {
-    color: #4985f5;
+    color: #4185ff;
   }
 
 }
