--- a/src/app/pages/messages/chatbox/chatbox.component.scss
+++ b/src/app/pages/messages/chatbox/chatbox.component.scss
@@ -16,15 +16,15 @@
     border-radius: 8px;
 }
 
-.message .message-content
-{
-    background-color: rgba(255, 255, 255, 0.21);
-    color: #ffffff;
-}
-.message-sent .message-content {
-    background-color: #001f54; // #dcf8c6;
-    color: #ffffff;
-}
+// .message .message-content
+// {
+//     background-color: rgba(255, 255, 255, 0.21);
+//     color: #ffffff;
+// }
+// .message-sent .message-content {
+//     background-color: #001f54; // #dcf8c6;
+//     color: #ffffff;
+// }
   
 .message-bubble {
     word-wrap: break-word;
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: flex-end;
     font-size: 12px;
-    color: #999;
+    // color: #999;
     margin-top: 4px;
 }
 
