--- a/src/app/pages/exercise-explorer/instruction-modal/instruction-modal.component.scss
+++ b/src/app/pages/exercise-explorer/instruction-modal/instruction-modal.component.scss
@@ -1,7 +1,7 @@
 .circle {
   width: 30px;
   height: 30px;
-  background-color: #3daad7;
+  // background-color: #3daad7;
   color: white;
   border-radius: 50%;
   display: flex;
