quick theme fix

--- a/src/app/pages/messages/group-user/group-user.component.html
+++ b/src/app/pages/messages/group-user/group-user.component.html
@@ -5,7 +5,7 @@
   <ion-label>
     <h2 *ngIf="userId !== currentUserId">{{profile.displayName}}</h2>
     <h2 *ngIf="userId === currentUserId">{{profile.displayName}} (You)</h2>
-    <p>{{profile.bio}}</p>
+    <p class="bio">{{"~ " + profile.bio}}</p>
   </ion-label>
 </ion-item>
 
