--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -7,76 +7,87 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-       <div class="icon-container">
-        <ion-icon src="/assets/dumbbell-small-svgrepo-com.svg"></ion-icon>
-       </div>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item lines = "none">
-          <ion-label position="stacked" style="font-size:x-large">Workout Name</ion-label>
-          <ion-input type="text" [(ngModel)]="schedule.name" placeholder="Enter the name of the workout"  autofocus="false" (ionChange)="valueChanged($event)"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item lines = "none">
-          <ion-label position="stacked" style="font-size:x-large">Time</ion-label>
-          <ion-input type="time" [(ngModel)]="schedule.time" [min]="getMinTime()" (ionChange)="valueChanged($event)"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item lines = "none">
-          <ion-label position="stacked" style="font-size:x-large">Date</ion-label>
-          <ion-input type="date" [(ngModel)]="schedule.date" [min]="getMinDate()" (ionChange)="valueChanged($event)"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>        
-    <ion-row>
-      <ion-col>
-        <ion-item lines = "none">
-          <ion-label position="stacked" style="font-size: x-large">Location</ion-label>
-          <div class="wrapper">
-            <div class="input">
-              <ion-input type="text" class="location" [(ngModel)]="schedule.location" placeholder="Click on the location icon"></ion-input>
+  <div class="outer-container">
+    <div class="inner-container">
+      <ion-grid>
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12" size-lg="6">
+            <div class="title-container">
+              <h1 class="title">SweatSession, Your Fitness Community</h1>
+            <h3 class="subtitle">Create a Workout Schedule for a Stronger, Healthier You.</h3>
             </div>
-            <div class="icon"> 
-              <ion-icon name="location-outline" (click)="openLocationModal()" class="location-icon"></ion-icon>
+          </ion-col>
+        </ion-row>
+
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12" size-lg="6">
+            <div class="input-field-container">
+              <ion-label>Workout Name*</ion-label>
+              <ion-item class="input-field" lines = "none">
+                <ion-input type="text" [(ngModel)]="schedule.name" placeholder="Enter the name of the workout"  autofocus="false" (ionChange)="valueChanged($event)"></ion-input>
+              </ion-item>
             </div>
-          </div>
-        </ion-item>
-      </ion-col>
-    </ion-row>    
-    <ion-row>
-      <ion-col>
-        <ion-item lines="none">
-          <ion-label position="stacked" style="font-size:x-large">Duration (min)</ion-label>
-          <ion-input type="number" [(ngModel)]="schedule.duration" placeholder="Enter workout duration in minutes" (ionChange)="valueChanged($event)"></ion-input>
-        </ion-item>
-
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-note *ngIf="!isValidInput()" color="danger">
-        *Please fill all the fields
-      </ion-note>
-      <ion-note *ngIf="!IsvalidDuration()" color="danger">
-        *Duration should be greater than 10 minutes
-      </ion-note>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-button expand="block" (click)="addSchedule()" [disabled]="!isValidInput()">Save</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+          </ion-col>
+        </ion-row>
+    
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="6" size-lg="3">
+            <div class="input-field-container">
+              <ion-label>Date*</ion-label>
+              <ion-item class="input-field" lines="none">
+                <ion-input type="date" [(ngModel)]="schedule.date" [min]="getMinDate()" (ionChange)="valueChanged($event)"></ion-input>
+              </ion-item>
+            </div>
+          </ion-col>
+          <ion-col size="6" size-lg="3">
+            <div class="input-field-container">
+              <ion-label>Time*</ion-label>
+              <ion-item class="input-field" lines="none">
+                <ion-input type="time" [(ngModel)]="schedule.time" [min]="getMinTime()" (ionChange)="valueChanged($event)"></ion-input>
+              </ion-item>
+            </div>
+          </ion-col>
+        </ion-row>
+    
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12" size-lg="6">
+            <div class="input-field-container">
+              <ion-label>Location*</ion-label>
+              <ion-item class="input-field" lines = "none">
+                <ion-input type="text" class="location" [(ngModel)]="schedule.location" placeholder="Click on the location icon"></ion-input>
+                <ion-icon name="location-outline" (click)="openLocationModal()" class="location-icon"></ion-icon>
+              </ion-item>
+            </div>
+          </ion-col>
+        </ion-row>
+    
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12" size-lg="6">
+            <div class="input-field-container">
+              <ion-label>Duration (min)*</ion-label>
+              <ion-item class="input-field" lines="none">
+                <ion-input type="number" [(ngModel)]="schedule.duration" placeholder="Enter workout duration in minutes" (ionChange)="valueChanged($event)"></ion-input>
+              </ion-item>
+            </div>
+          </ion-col>
+        </ion-row>
+    
+        <ion-row class="ion-justify-content-center">
+          <ion-note *ngIf="!isValidInput()" color="danger">
+            *Please fill all the fields
+          </ion-note>
+          <ion-note *ngIf="!IsvalidDuration()" color="danger">
+            *Duration should be greater than 10 minutes
+          </ion-note>
+        </ion-row>
+    
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12" size-lg="6">
+            <ion-button expand="block" (click)="addSchedule()" [disabled]="!isValidInput()">Save</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </div>
 </ion-content>
 
