--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -57,7 +57,7 @@
               </div>
               <ion-button class="loginButton" expand="block" (click)="continueWithGoogleAuth()" class="white-button">
                 <ion-icon name="logo-google" style="padding-right:5%;"></ion-icon>
-                <ion-text>Continue with Google</ion-text>
+                Continue with Google
               </ion-button>
             </div>
           </form>
